project_aws/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:680993828418:certificate/9f19d5d4-1ed0-47b7-b3d6-b1ac1f880d39
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    external-dns.alpha.kubernetes.io/hostname: grafana.lovebridge.click
spec:
  ingressClassName: alb
  rules:
    - host: grafanas.lovebridge.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
